--- a/index.html
+++ b/index.html
@@ -17,52 +17,61 @@
             padding: 0;
         }
 
+        html, body {
+            height: 100%;
+            overflow: hidden;
+        }
+
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            min-height: 100vh;
-            padding: 16px;
-            padding-bottom: 80px;
+            padding: 12px;
+            display: flex;
+            flex-direction: column;
         }
 
         .container {
             max-width: 500px;
             margin: 0 auto;
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            overflow: hidden;
         }
 
         h1 {
             color: white;
             text-align: center;
-            font-size: 1.5rem;
-            margin-bottom: 20px;
+            font-size: 1.3rem;
+            margin-bottom: 12px;
             text-shadow: 0 2px 4px rgba(0,0,0,0.2);
         }
 
         .card {
             background: white;
             border-radius: 16px;
-            padding: 20px;
-            margin-bottom: 16px;
+            padding: 16px;
+            margin-bottom: 12px;
             box-shadow: 0 4px 15px rgba(0,0,0,0.1);
         }
 
         .card-title {
-            font-size: 1.1rem;
+            font-size: 1rem;
             color: #333;
-            margin-bottom: 16px;
+            margin-bottom: 12px;
             display: flex;
             align-items: center;
             gap: 8px;
         }
 
         .input-group {
-            margin-bottom: 16px;
+            margin-bottom: 12px;
         }
 
         .input-row {
             display: flex;
-            gap: 12px;
-            margin-bottom: 12px;
+            gap: 10px;
+            margin-bottom: 10px;
         }
 
         .input-field {
@@ -71,17 +80,17 @@
 
         .input-field label {
             display: block;
-            font-size: 0.85rem;
+            font-size: 0.8rem;
             color: #666;
-            margin-bottom: 6px;
+            margin-bottom: 4px;
         }
 
         .input-field input {
             width: 100%;
-            padding: 14px;
+            padding: 10px;
             border: 2px solid #e0e0e0;
-            border-radius: 12px;
-            font-size: 1.2rem;
+            border-radius: 10px;
+            font-size: 1.1rem;
             text-align: center;
             transition: border-color 0.2s;
         }
@@ -93,10 +102,10 @@
 
         .btn {
             width: 100%;
-            padding: 16px;
+            padding: 12px;
             border: none;
-            border-radius: 12px;
-            font-size: 1rem;
+            border-radius: 10px;
+            font-size: 0.95rem;
             font-weight: 600;
             cursor: pointer;
             transition: transform 0.1s, opacity 0.2s;
@@ -212,20 +221,20 @@
         .tabs {
             display: flex;
             background: rgba(255,255,255,0.2);
-            border-radius: 12px;
-            padding: 4px;
-            margin-bottom: 16px;
+            border-radius: 10px;
+            padding: 3px;
+            margin-bottom: 12px;
         }
 
         .tab {
             flex: 1;
-            padding: 12px;
+            padding: 10px;
             border: none;
             background: transparent;
             color: white;
-            font-size: 0.9rem;
+            font-size: 0.85rem;
             font-weight: 500;
-            border-radius: 10px;
+            border-radius: 8px;
             cursor: pointer;
             transition: background 0.2s;
         }
@@ -237,18 +246,21 @@
 
         .tab-content {
             display: none;
+            flex: 1;
+            overflow: auto;
         }
 
         .tab-content.active {
-            display: block;
+            display: flex;
+            flex-direction: column;
         }
 
         .note-input {
             width: 100%;
-            padding: 12px;
+            padding: 8px;
             border: 2px solid #e0e0e0;
-            border-radius: 12px;
-            font-size: 0.95rem;
+            border-radius: 10px;
+            font-size: 0.9rem;
             resize: none;
             font-family: inherit;
         }
@@ -259,19 +271,19 @@
         }
 
         .history-note {
-            font-size: 0.85rem;
+            font-size: 0.8rem;
             color: #666;
-            margin-top: 6px;
+            margin-top: 4px;
             font-style: italic;
         }
 
         .pressure-indicator {
             display: inline-block;
-            padding: 2px 8px;
-            border-radius: 6px;
-            font-size: 0.7rem;
+            padding: 2px 6px;
+            border-radius: 5px;
+            font-size: 0.65rem;
             font-weight: 600;
-            margin-left: 8px;
+            margin-left: 6px;
         }
 
         .pressure-normal { background: #d4edda; color: #155724; }
@@ -281,16 +293,16 @@
 
         .time-of-day-selector {
             display: flex;
-            gap: 8px;
+            gap: 6px;
         }
 
         .tod-btn {
             flex: 1;
-            padding: 12px 8px;
+            padding: 8px 6px;
             border: 2px solid #e0e0e0;
             background: white;
-            border-radius: 10px;
-            font-size: 0.9rem;
+            border-radius: 8px;
+            font-size: 0.8rem;
             cursor: pointer;
             transition: all 0.2s;
         }
@@ -306,13 +318,18 @@
 
         .history-tod {
             display: inline-block;
-            font-size: 0.85rem;
+            font-size: 0.8rem;
             margin-right: 4px;
+        }
+
+        .history-card {
+            flex: 1;
+            overflow: auto;
         }
 
         @media (max-width: 360px) {
             .history-value .number {
-                font-size: 1.1rem;
+                font-size: 1rem;
             }
             .stats {
                 grid-template-columns: 1fr;
@@ -350,7 +367,7 @@
                     </div>
                 </div>
                 <div class="input-group">
-                    <label style="display:block; font-size:0.85rem; color:#666; margin-bottom:6px;">Время суток</label>
+                    <label style="display:block; font-size:0.8rem; color:#666; margin-bottom:4px;">Время суток</label>
                     <div class="time-of-day-selector">
                         <button type="button" class="tod-btn" data-tod="morning" onclick="selectTimeOfDay('morning')">🌅 Утро</button>
                         <button type="button" class="tod-btn" data-tod="day" onclick="selectTimeOfDay('day')">☀️ День</button>
@@ -358,15 +375,15 @@
                     </div>
                 </div>
                 <div class="input-group">
-                    <label style="display:block; font-size:0.85rem; color:#666; margin-bottom:6px;">Заметка (необязательно)</label>
-                    <textarea class="note-input" id="note" rows="2" placeholder="После прогулки, натощак..."></textarea>
+                    <label style="display:block; font-size:0.8rem; color:#666; margin-bottom:4px;">Заметка (необязательно)</label>
+                    <textarea class="note-input" id="note" rows="1" placeholder="После прогулки, натощак..."></textarea>
                 </div>
                 <button class="btn btn-primary" onclick="saveEntry()">💾 Сохранить запись</button>
             </div>
         </div>
 
         <div id="tab-history" class="tab-content">
-            <div class="card">
+            <div class="card history-card">
                 <div class="card-title">📋 История измерений</div>
                 <div id="history-list"></div>
             </div>
